# websocket_client

./: Cargo.toml
src-tauri/: .Cargo.toml.swp  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
